<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ranrunner.bestby.AddActivity">

    <EditText
        android:id="@+id/itemName_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:maxLines="1"
        android:hint="@string/itemname_enter"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_select"
        android:layout_below="@+id/itemName_field"
        android:layout_alignParentStart="true"
        android:onClick="selectDate" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:layout_below="@+id/date_button"
        android:layout_toEndOf="@+id/date_button"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/day_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        android:layout_marginStart="43dp"
        android:layout_alignBaseline="@+id/date_label"
        android:layout_alignBottom="@+id/date_label"
        android:layout_toEndOf="@+id/date_label" />

    <TextView
        android:id="@+id/year_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:layout_alignBaseline="@+id/day_label"
        android:layout_alignBottom="@+id/day_label"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="26dp" />

    <TextView
        android:id="@+id/month_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_below="@+id/itemName_field"
        android:layout_alignStart="@+id/date_label"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/day_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_alignBaseline="@+id/month_value"
        android:layout_alignBottom="@+id/month_value"
        android:layout_alignStart="@+id/day_label" />

    <TextView
        android:id="@+id/year_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_alignBaseline="@+id/day_value"
        android:layout_alignBottom="@+id/day_value"
        android:layout_alignStart="@+id/year_label" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="add"/>

</RelativeLayout>