<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_inList"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:text="@string/itemtext_inlist"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginStart="5dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/date_inList"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/datetext_inlist"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginStart="5dp"
        android:layout_below="@+id/item_inList"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/idprefix_inList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_prefix"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginEnd="3dp"
        android:layout_alignBaseline="@+id/id_inList"
        android:layout_alignBottom="@+id/id_inList"
        android:layout_toStartOf="@+id/id_inList"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/id_inList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginEnd="5dp"
        android:layout_below="@+id/item_inList"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff" />

</RelativeLayout>