<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_remove"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ranrunner.bestby.RemoveActivity">

    <TextView
        android:id="@+id/itemName_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/idprefix_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_prefix"
        android:layout_below="@+id/itemName_value"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:layout_marginStart ="3dp"
        android:layout_alignBaseline="@+id/idprefix_label"
        android:layout_alignBottom="@+id/idprefix_label"
        android:layout_toEndOf="@+id/idprefix_label" />

    <TextView
        android:id="@+id/date_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_value"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textColor="@android:color/black"
        android:layout_marginBottom="19dp"
        android:layout_alignBottom="@+id/date_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bestby_label"
        android:layout_marginTop="95dp" />

    <Button
        android:id="@+id/remove_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        tools:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="remove"/>

</RelativeLayout>